# bench-parallel-scan

./: README.md  bench.py  jax_bench.py  jax_benchmark_results.ecsv  jax_cpu_benchmark_results.ecsv  numba_cpu_benchmark_results.ecsv  numba_cpu_single_benchmark_results.ecsv  plot.py  pyproject.toml  thrust_benchmark_results.ecsv
